# rust-compression-comparison

./: .gitignore  README.md  plot.py  results.csv  setup-corpora.sh
common/: Cargo.toml
common/src/: lib.rs
schemes/: clean.sh  run.sh
schemes/brotli/: Cargo.toml
schemes/brotli/src/: main.rs
schemes/brotlic/: Cargo.toml
schemes/brotlic/src/: main.rs
schemes/bzip2/: Cargo.toml
schemes/bzip2/src/: main.rs
schemes/deflate/: Cargo.toml
schemes/deflate/src/: main.rs
schemes/flate2-rust/: Cargo.toml
schemes/flate2-rust/src/: main.rs
schemes/flate2-zlib-ng/: Cargo.toml
schemes/flate2-zlib-ng/src/: main.rs
schemes/lz4_flex/: Cargo.toml
schemes/lz4_flex/src/: main.rs
schemes/lz4_flex_unsafe/: Cargo.toml
schemes/lz4_flex_unsafe/src/: main.rs
schemes/lzma-rs/: Cargo.toml
schemes/lzma-rs/src/: main.rs
schemes/lzo1x/: Cargo.toml
schemes/lzo1x/src/: main.rs
schemes/lzss/: Cargo.toml
schemes/lzss/src/: main.rs
schemes/lzzzz/: Cargo.toml
schemes/lzzzz/src/: main.rs
schemes/rust-lzma/: Cargo.toml
schemes/rust-lzma/src/: main.rs
schemes/snap/: Cargo.toml
schemes/snap/src/: main.rs
schemes/tetsy-snappy/: Cargo.toml
schemes/tetsy-snappy/src/: main.rs
schemes/uncompressed/: Cargo.toml
schemes/uncompressed/src/: main.rs
schemes/xsnappy/: Cargo.toml
schemes/xsnappy/src/: main.rs
schemes/yazi/: Cargo.toml
schemes/yazi/src/: main.rs
schemes/zopfli/: Cargo.toml
schemes/zopfli-rs/: Cargo.toml
schemes/zopfli-rs/src/: main.rs
schemes/zopfli/src/: main.rs
schemes/zstd/: Cargo.toml
schemes/zstd/src/: main.rs
